language/move-lang/tests/move_check/expansion/friend_decl_aliased_duplicates.move
address 0x42 {
module A {}

module M {
    use 0x42::A as AliasedA;
    friend 0x42::A;
    friend AliasedA;
}
}
